feat: added a create submission and get all submissions endpoint
